--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@ function openWorld(name) {
           <li><a href="제이드 당근마켓.html">제이드 당근마켓</a></li>
         `;
       } else if (name === '황궁의 꽃') {
+        storyItems = `
+          <li><a href="황궁의 꽃 1.html">메인 1</a></li>
+          <li><a href="황궁의 꽃 2.html">메인 2</a></li>
+          <li><a href="황궁의 꽃 2.html">메인 3</a></li>
         burnerItems = `
           <li><a href="리브론 커플 데이트 체크리스트.html">커플 데이트 체크리스트</a></li>
           <li><a href="리브론 커플 tmi 체크리스트.html">커플 tmi 체크리스트</a></li>
@@ -396,6 +400,7 @@ function openWorld(name) {
         `;
       } else if (name === '구룡성채') {
         storyItems = `
+          <li><a href="구룡성채 로렌조노아루트.html" target="_blank">로렌조,노아 루트</a></li>
           <li><a href="구룡성채-아이작 회귀.html" target="_blank">아이작 회귀</a></li>
           <li><a href="구룡성채_리처드루트.html" target="_blank">리처드 루트</a></li>
         `;
@@ -435,6 +440,8 @@ function openWorld(name) {
       } else if (name === 'ETC') {
         storyItems = `
           <li><a href="잊고 잃어버린 신님 02-20.html">잊고 잃어버린 신님</a></li>
+          <li><a href="내 혈육의 친구.html">내 혈육의 친구</a></li>
+          <li><a href="머메이드 02-20.html">머메이드</a></li>
         burnerItems = `
           <li><a href="기도현 휴대폰.html">기도현 폰</a></li>
         `;
